k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapper-frontend
spec:
  type: ClusterIP
  selector:
    app: scrapper-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
